[tool.poetry]
name = "apubsub"
version = "0.1.0"
description = "Message service implementing publisher/subscriber pattern"
authors = ["Anton Kachurin <katchuring@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pylint = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
